...
                android:layout_marginBottom="@dimen/margin_sm"
                android:layout_marginTop="@dimen/margin_sm"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/typingSearchWithTextBtn"
                app:layout_constraintVertical_bias="1.0"/>

        <Button
                android:id="@+id/typingSearchWithTextBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

        <EditText
                android:id="@+id/typingSearchWithTextEt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_xl"
                android:layout_marginEnd="@dimen/margin_xl"
                android:layout_marginBottom="@dimen/margin_md"
                android:imeOptions="actionDone"
...
