<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:keepScreenOn="true">

    <com.github.michalchojnacki.findbook.ui.camera.CameraSourcePreview
            android:id="@+id/scannerPreview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

        <com.github.michalchojnacki.findbook.ui.camera.GraphicOverlay
                android:id="@+id/scannerOverlay"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

    </com.github.michalchojnacki.findbook.ui.camera.CameraSourcePreview>

    <Button
            android:id="@+id/scannerGoToSearchTextBtn"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scanner_ocr_search_with_text"
            android:textColor="@color/md_white_1000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
