...
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="@dimen/toolbar_height">

        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/books_rv"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:paddingTop="@dimen/margin_sm"
                app:bookListAdapter="@{viewModel.uiState.books}"
                app:requestManager="@{viewModel.requestManager}"
                app:onBookSelectedListener="@{viewModel.onBookSelectedListener}"
...
